# spring-keys

./: .gitignore  COLOR_SPECTRUM.md  CONTRIBUTING.md  Cargo.toml  KEYBOARD_HEATMAP.md  LICENSE  Makefile  PHASES.md  PLAN-PHASE0.md  PLAN-PHASE1.md  PLAN-PHASE10.md  PLAN-PHASE11.md  PLAN-PHASE2.md  PLAN-PHASE3.md  PLAN-PHASE4.md  PLAN-PHASE5.md  PLAN-PHASE6.md  PLAN-PHASE7.md  PLAN-PHASE8.md  PLAN-PHASE9.md  PLAN.md  README.md  log  phase11.md  springkeys.toml
.github/: PULL_REQUEST_TEMPLATE.md
quotes/: README.md
scripts/: extract_quotes.py
src/: help.rs  lib.rs  logger.rs  main.rs  moosesay.rs  quotes.rs  vga_test.rs
stats/: 20250505193023.json  20250505193236.json  20250505193610.json  20250505193633.json  20250505193657.json  20250505193728.json  20250505193735.json  20250505194341.json  20250505194542.json  20250505194735.json  20250505194749.json  20250505194927.json  20250505194928.json  20250505194929.json  20250505194938.json  20250505195146.json  20250505195154.json  20250505200102.json  20250505200111.json  20250505200240.json  20250505200358.json  20250505200528.json  20250505200534.json  20250505200541.json  20250505203211.json  20250505203224.json  20250505203232.json  20250505203246.json  20250505203735.json  20250505203737.json  20250505203738.json  20250505203739.json  20250505203740.json  20250505203741.json  20250505203742.json  20250505203743.json  20250505203744.json  20250505203746.json  20250505203747.json  20250505203748.json  (+33 more)
tests/: color_spectrum_integration_test.rs  color_spectrum_test.rs  consume_mode_test.rs  input_processor_test.rs  (+7 more)
(+120 files in other folders)
