[package]
name = "spring-keys"
version = "0.1.0"
edition = "2021"
authors = ["SpringKeys Team"]
description = "A typing tutor with spring-based physics and mini-games"
default-run = "spring-keys"

[dependencies]
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
log = "0.4"
log4rs = "1.2"
thiserror = "1.0"
rand = "0.8"
colored = "2.1.0" 
chrono = "0.4.41"
clap = "3.2"
once_cell = "1.19"

[features]
default = []
