[package]
name = "spring-keys"
version = "0.1.0"
edition = "2021"
authors = ["SpringKeys Team"]
description = "A typing tutor with spring-based physics and mini-games"
default-run = "spring-keys"

[dependencies]
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8.0"
log = "0.4"
log4rs = "1.2"
thiserror = "1.0"
rand = "0.8"
colored = "2.1.0" 
chrono = { version = "0.4", features = ["serde"] }
clap = "3.2"
once_cell = "1.19"
termion = "4.0.5"

[features]
default = []

[dev-dependencies]
tempfile = "3.10.1"
